# divo

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  test-python-3.10.yml  test-python-3.7.yml  test-python-3.8.yml  test-python-3.9.yml
divo/: README.md  bluetooth_base.py  bluetooth_serial.py  bluetooth_socket.py  command.py  command_base.py  evo_encoder.py  evo_pixmap.py  exceptions.py  helpers.py  image.py  main.py  packet.py  packet_base.py  packet_stream.py  pixoo.py  test.py
divo/rest/: app.py
raspberry-pi/: setup.sh
tests/: test_bluetooth_serial.py  test_bluetooth_socket.py  test_helpers.py  test_main.py  test_packet.py  test_rest_app_imports.py
