[tool.poetry]
authors = ["spezifisch <spezifisch-gpl.7e6@below.fr>"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Operating System :: OS Independent",
]
description = "Divoom Pixoo and Timebox Evo controller"
homepage = "https://github.com/spezifisch/divo"
include = [
  "LICENSE",
]
keywords = ["divoom", "pixoo", "timebox", "evo", "rest", "api", "server"]
license = "GPL-3.0-only"
name = "divo"
readme = "README.md"
repository = "https://github.com/spezifisch/divo"
version = "0.2.0"

[tool.poetry.dependencies]
Pillow = "^9.0.0"
click = "^8.0.3"
colorconsole = "^0.7.2"
loguru = ">=0.5.3,<0.7.0"
pyserial = "^3.5"
python = "^3.7"
fastapi = {version = "^0.73.0", optional = true}

[tool.poetry.dev-dependencies]
black = "^21.12b0"
coverage = "^6.2"
flake8 = "^4.0.1"
mypy = "^0.931"
pre-commit = "^2.17.0"
pytest = "^6.2.5"

[tool.poetry.extras]
rest = ["fastapi"]

[tool.poetry.scripts]
divo = "divo.main:cli"

[tool.black]
line-length = 119

[tool.coverage.run]
branch = true
source = ["divo"]

[tool.coverage.report]
exclude_lines = ["@abstractmethod", "@abc.abstractmethod", "if __name__ == .__main__.:"]
show_missing = true

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "colorconsole",
  "PIL",
  "serial",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
